--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,11 +25,39 @@ set(main_src_list
     molmec_C Common_arrays_C elemts_C run_param
     mopend moldat chanel_C compfg
    )
+
+# Add GPU source files if GPU option is enabled
+if(GPU)
+    # Add GPU-related Fortran modules and CUDA interop wrappers
+    list(APPEND main_src_list
+        deprecated/mod_gpu_info
+        deprecated/mod_vars_cuda
+        deprecated/mod_calls_cublas
+        matrix/eigenvectors_cuda
+        matrix/call_rot_cuda
+        matrix/density_cuda_i
+        matrix/mamult_cuda_i
+    )
+    # Add CUDA C++ wrappers for cuBLAS/cuSOLVER interop
+    target_sources(mopac-core PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/gpu/cuda_wrappers.cu)
+endif()
+
 #-----------------------------------------------
 # Add a list of source files to the target
 foreach(idx IN LISTS main_src_list)
 	target_sources(mopac-core PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${idx}.F90)
 endforeach()
+
+# Set language for GPU source files
+if(GPU)
+    # Ensure Fortran files still compile as Fortran (no CUDA Fortran required)
+    # and compile the CUDA .cu wrapper via CUDA language
+    set_source_files_properties(
+        ${CMAKE_CURRENT_SOURCE_DIR}/gpu/cuda_wrappers.cu
+        PROPERTIES LANGUAGE CUDA
+    )
+endif()
+
 #===============================================
 # Make a list of subdirectories to be added to the build structure  
 set(dir_list
