--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,7 @@ if (STATIC_BUILD)
   target_link_options(mopac-core PUBLIC "-static")
   set(BLA_STATIC ON)
 else()
-  add_library(mopac-core SHARED)
+add_library(mopac-core SHARED)
   if(FORCE_EXPORT_SYMBOLS)
     set_target_properties(mopac-core PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS true)
   endif()
@@ -148,6 +148,7 @@ endif()
 
 # MOPAC shared library ABI compatibility version
 set_target_properties(mopac-core PROPERTIES SOVERSION 2)
+set_target_properties(mopac-core PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_BINARY_DIR}/mod/core")
 
 # Adjust legacy PGI compiler behavior: disable C-style backslash characters & warn about CRLF handling
 if(CMAKE_Fortran_COMPILER_ID MATCHES "PGI|Flang")
@@ -292,6 +293,7 @@ if(TESTS)
   endif()
   enable_testing()
   add_executable(mopac-api-test)
+  set_target_properties(mopac-api-test PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_BINARY_DIR}/mod/api-test")
   target_link_libraries(mopac-api-test mopac-core)
   if(GPU)
     add_executable(mopac-gpu-verify tests/gpu_verify.F90)
@@ -301,11 +303,8 @@ if(TESTS)
     add_executable(mopac-gpu-rot-verify tests/gpu_rot_verify.F90)
     target_link_libraries(mopac-gpu-rot-verify mopac-core)
     add_executable(mopac-gpu-scf-compare tests/gpu_scf_compare.F90)
+    set_target_properties(mopac-gpu-scf-compare PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_BINARY_DIR}/mod/gpu-scf-compare")
     target_link_libraries(mopac-gpu-scf-compare mopac-core)
-    # The Fortran API module (mopac_api_f) is defined in include/
-    # and is needed by gpu_scf_compare; add sources here too
-    target_sources(mopac-gpu-scf-compare PRIVATE ${CMAKE_SOURCE_DIR}/include/mopac_wrapper.F90)
-    target_sources(mopac-gpu-scf-compare PRIVATE ${CMAKE_SOURCE_DIR}/include/mopac_wrapper_internal.F90)
   endif()
   add_subdirectory(include)
   add_subdirectory(tests)
