fixing MOZYME GPU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -335,10 +335,32 @@ if(TESTS)
     add_executable(mopac-gpu-rot-verify tests/gpu_rot_verify.F90)
     target_link_libraries(mopac-gpu-rot-verify mopac-core)
     add_dependencies(mopac-gpu-rot-verify mopac-core)
+    add_executable(mopac-gpu-rot-2gpu-verify tests/gpu_rot_2gpu_verify.F90)
+    target_link_libraries(mopac-gpu-rot-2gpu-verify mopac-core)
+    add_dependencies(mopac-gpu-rot-2gpu-verify mopac-core)
     add_executable(mopac-gpu-scf-compare tests/gpu_scf_compare.F90)
     set_target_properties(mopac-gpu-scf-compare PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_BINARY_DIR}/mod/gpu-scf-compare")
     target_link_libraries(mopac-gpu-scf-compare mopac-core)
     add_dependencies(mopac-gpu-scf-compare mopac-core)
+
+    # Optional: register 2-GPU rotation verification with ctest
+    if(ENABLE_GPU_TESTS)
+      add_test(NAME gpu_rot_verify
+        COMMAND $<TARGET_FILE:mopac-gpu-rot-verify>)
+      set_tests_properties(gpu_rot_verify PROPERTIES LABELS "gpu" ENVIRONMENT "CUDA_VISIBLE_DEVICES=0")
+
+      add_test(NAME gpu_rot_2gpu_verify
+        COMMAND $<TARGET_FILE:mopac-gpu-rot-2gpu-verify>)
+      set_tests_properties(gpu_rot_2gpu_verify PROPERTIES LABELS "gpu" ENVIRONMENT "CUDA_VISIBLE_DEVICES=0,1")
+
+      add_test(NAME gpu_density_verify
+        COMMAND $<TARGET_FILE:mopac-gpu-density-verify>)
+      set_tests_properties(gpu_density_verify PROPERTIES LABELS "gpu" ENVIRONMENT "CUDA_VISIBLE_DEVICES=0")
+
+      add_test(NAME gpu_scf_compare
+        COMMAND $<TARGET_FILE:mopac-gpu-scf-compare>)
+      set_tests_properties(gpu_scf_compare PROPERTIES LABELS "gpu" ENVIRONMENT "CUDA_VISIBLE_DEVICES=0;MOPAC_FORCEGPU=1")
+    endif()
   endif()
   add_subdirectory(include)
   add_subdirectory(tests)
