--- a/src/interface/CMakeLists.txt
+++ b/src/interface/CMakeLists.txt
@@ -18,6 +18,7 @@
 set(src_list 
         mopac_api mopac_api_initialize mopac_api_finalize
         mopac_api_saveload mopac_api_createdestroy mopac_api_operations
+        mopac_api_flags
    )
 #-----------------------------------------------
 # Add a list of source files to the target
